--- a/todo.txt
+++ b/todo.txt
@@ -1,5 +1,6 @@
 Rampage - format 1+name
-Robotron - implement charset stuff to remove ":" from name in highscore
+Robotron - implement charset : stuff to remove ":" from name in highscore
+Robotron - implement format : hexadecimal_string
 Robotron - Heroes Score incorporate Top Score if above some Heroes Score
 Add those options below
 (-r: read main high score entries
